<resources>
<<<<<<< HEAD
    <string name="app_name">CommonChat</string>
=======
    <string name="app_name">은근 쓸모있는 채팅앱</string>
>>>>>>> add/commend
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="send">전송</string>
    <string name="joinus">회원가입</string>
    <string name="loginGoogle">구글플러스로 로그인</string>
    <string name="or">or</string>
    <string name="returnJoin">회원이신가요?</string>

    <string name="facebook_app_id">253473855197613</string>
    <string name="fb_login_protocol_scheme">fb253473855197613</string>

    <string name="setProfile">프로필 설정</string>
    <string name="setName">이름을 입력해주세요.</string>
    <string name="start">시작하기</string>

    <string name="tabFriend">친구</string>
    <string name="tabChat">채팅</string>
    <string name="tabSetting">설정</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
