<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetProfileActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setProfile"
        android:textSize="30dp"
        android:gravity="center"
        android:fontFamily="@font/font_bmjua"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setName"
        android:inputType="text"
        android:maxLines="1"
        android:fontFamily="@font/font_bmjua"
        android:hint="@string/setName"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/btnStart"
        android:fontFamily="@font/font_bmjua"
        android:layout_marginBottom="20dp"/>

</LinearLayout>