<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/tabFriendList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabFriend" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabChatList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabChat" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabSetting" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</android.support.constraint.ConstraintLayout>