<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill">

        <android.support.design.widget.TabItem
            android:id="@+id/tabFriendList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabFriend" />

<<<<<<< HEAD
        <android.support.design.widget.TabItem
            android:id="@+id/tabChatList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabChat" />

=======
        <!--설정목록-->
>>>>>>> d0da73f... [수정] - 채팅 탭 제거
        <android.support.design.widget.TabItem
            android:id="@+id/tabSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabSetting" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>