<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinUsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/joinus"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editJoinEmail"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient_edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editJoinPassword"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gradient_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editJoinEmail" />

    <EditText
        android:id="@+id/editJoinPassword2"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gradient_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editJoinPassword" />

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gradient_button"
        android:text="@string/joinus"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editJoinPassword2" />


    <TextView
        android:id="@+id/btnReturnJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/returnJoin"
        android:textColor="#888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJoin" />

</android.support.constraint.ConstraintLayout>